update config section name

--- a/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
+++ b/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
@@ -397,7 +397,7 @@ max_temp: 99999999
 
 # p20 extruder stepper homing
 # Config section for the new extruder_homing.py extras module.
-[extruder_homing extruder]
+[extruder_home extruder]
 # Parameters for "ExtruderHoming":
 velocity: 25.0
 accel: 100.0
@@ -415,7 +415,7 @@ endstop_pin: ^!tools:PB3
 
 # p200 extruder stepper homing
 # Config section for the new extruder_homing.py extras module.
-[extruder_homing extruder1]
+[extruder_home extruder1]
 # Parameters for "ExtruderHoming":
 velocity: 25.0
 accel: 100.0
