move PrinterRail parameters to extruder sections

--- a/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
+++ b/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
@@ -253,7 +253,17 @@ max_temp: 99999999
 #   heater and sensor hardware failures. Set this range just wide
 #   enough so that reasonable temperatures do not result in an error.
 #   These parameters must be provided.
-
+position_endstop: 0.0
+position_min: 0.0
+position_max: 100.0
+homing_speed: 25.0
+second_homing_speed: 25.0
+homing_retract_speed: 25.0
+homing_retract_dist: 2.0
+homing_positive_dir: True
+# Parameters for setting up an extruder "PrinterRail"
+endstop_pin: ^!tools:PB3
+# Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
 
 
 # EXTRUDER 1 - p200 ####
@@ -394,6 +404,17 @@ max_temp: 99999999
 #   heater and sensor hardware failures. Set this range just wide
 #   enough so that reasonable temperatures do not result in an error.
 #   These parameters must be provided.
+position_endstop: 0.0
+position_min: 0.0
+position_max: 100.0
+homing_speed: 25.0
+second_homing_speed: 25.0
+homing_retract_speed: 25.0
+homing_retract_dist: 2.0
+homing_positive_dir: True
+# Parameters for setting up an extruder "PrinterRail"
+endstop_pin: !tools:PB0
+# Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
 
 # p20 extruder stepper homing
 # Config section for the new extruder_homing.py extras module.
@@ -401,17 +422,6 @@ max_temp: 99999999
 # Parameters for "ExtruderHoming":
 velocity: 25.0
 accel: 100.0
-# Parameters for "RailFromStepper":
-position_endstop: 0.0
-position_min: 0.0
-position_max: 100.0
-homing_speed: 25.0
-second_homing_speed: 25.0
-homing_retract_speed: 25.0
-homing_retract_dist: 2.0
-homing_positive_dir: True
-# Parameters for add_extra_stepper
-endstop_pin: ^!tools:PB3
 
 # p200 extruder stepper homing
 # Config section for the new extruder_homing.py extras module.
@@ -419,14 +429,3 @@ endstop_pin: ^!tools:PB3
 # Parameters for "ExtruderHoming":
 velocity: 25.0
 accel: 100.0
-# Parameters for "RailFromStepper":
-position_endstop: 0.0
-position_min: 0.0
-position_max: 100.0
-homing_speed: 25.0
-second_homing_speed: 25.0
-homing_retract_speed: 25.0
-homing_retract_dist: 2.0
-homing_positive_dir: True
-# Parameters for add_extra_stepper
-endstop_pin: !tools:PB0
