fix: Error: Invalid homing_positive_dir / position_endstop in 'extruder'

--- a/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
+++ b/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
@@ -260,7 +260,7 @@ homing_speed: 25.0
 second_homing_speed: 25.0
 homing_retract_speed: 25.0
 homing_retract_dist: 2.0
-homing_positive_dir: True
+homing_positive_dir: False
 # Parameters for setting up an extruder "PrinterRail"
 endstop_pin: ^!tools:PB3
 # Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
@@ -411,7 +411,7 @@ homing_speed: 25.0
 second_homing_speed: 25.0
 homing_retract_speed: 25.0
 homing_retract_dist: 2.0
-homing_positive_dir: True
+homing_positive_dir: False
 # Parameters for setting up an extruder "PrinterRail"
 endstop_pin: !tools:PB0
 # Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
