de-duplicate sensor and heater pins on extruder

--- a/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
+++ b/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
@@ -185,8 +185,8 @@ pressure_advance: 0.0
 #   default is 0.040 (40 milliseconds).
 #
 # The remaining variables describe the extruder heater.
-# Setting to the CNC shield unused "Hold" pin on A1
-heater_pin: tools:PC1
+# Setting to the CNC shield unused A0 / "Abort" pin.
+heater_pin: tools:PC0
 #   PWM output pin controlling the heater. This parameter must be
 #   provided.
 #max_power: 1.0
@@ -203,8 +203,8 @@ sensor_type: EPCOS 100K B57560G104F
 #   "SliceEngineering 450", and "TDK NTCG104LH104JT1". See the
 #   "Temperature sensors" section for other sensors. This parameter
 #   must be provided.
-# Setting to the CNC shield unused "Resume" pin on A2
-sensor_pin: tools:PC2
+# Setting to the CNC shield unused A1 / "Feed hold" pin.
+sensor_pin: tools:PC1
 #   Analog input pin connected to the sensor. This parameter must be
 #   provided.
 #pullup_resistor: 4700
@@ -336,8 +336,8 @@ pressure_advance: 0.0
 #   default is 0.040 (40 milliseconds).
 #
 # The remaining variables describe the extruder heater.
-# Setting to the CNC shield unused "Hold" pin on A1
-heater_pin: tools:PC1
+# Setting to the CNC shield unused A2 / "Pause" pin.
+heater_pin: tools:PC2
 #   PWM output pin controlling the heater. This parameter must be
 #   provided.
 #max_power: 1.0
@@ -354,8 +354,8 @@ sensor_type: EPCOS 100K B57560G104F
 #   "SliceEngineering 450", and "TDK NTCG104LH104JT1". See the
 #   "Temperature sensors" section for other sensors. This parameter
 #   must be provided.
-# Setting to the CNC shield unused "Resume" pin on A2
-sensor_pin: tools:PC2
+# Setting to the CNC shield unused A4 / "Unused" pin.
+sensor_pin: tools:PC4
 #   Analog input pin connected to the sensor. This parameter must be
 #   provided.
 #pullup_resistor: 4700
