--- a/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
+++ b/config/configs-pipetting-bot/printer-multi_extruder_home.cfg
@@ -262,6 +262,7 @@ homing_retract_speed: 25.0
 homing_retract_dist: 2.0
 homing_positive_dir: False
 # Parameters for setting up an extruder "PrinterRail"
+# Endstop pin at the D10 / Y-limit pin, on 2nd MCU.
 endstop_pin: ^!tools:PB3
 # Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
 
@@ -336,7 +337,7 @@ pressure_advance: 0.0
 #   default is 0.040 (40 milliseconds).
 #
 # The remaining variables describe the extruder heater.
-# Setting to the CNC shield unused A2 / "Pause" pin.
+# Setting to the CNC shield unused A2 / "Cycle start" pin.
 heater_pin: tools:PC2
 #   PWM output pin controlling the heater. This parameter must be
 #   provided.
@@ -354,8 +355,8 @@ sensor_type: EPCOS 100K B57560G104F
 #   "SliceEngineering 450", and "TDK NTCG104LH104JT1". See the
 #   "Temperature sensors" section for other sensors. This parameter
 #   must be provided.
-# Setting to the CNC shield unused A4 / "Unused" pin.
-sensor_pin: tools:PC4
+# Setting to the CNC shield unused A3 / "Coolant" pin.
+sensor_pin: tools:PC3
 #   Analog input pin connected to the sensor. This parameter must be
 #   provided.
 #pullup_resistor: 4700
@@ -413,7 +414,8 @@ homing_retract_speed: 25.0
 homing_retract_dist: 2.0
 homing_positive_dir: False
 # Parameters for setting up an extruder "PrinterRail"
-endstop_pin: !tools:PB0
+# Endstop pin at the D10 / Y-limit pin, on 2nd MCU.
+endstop_pin: !tools:PB2
 # Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
 
 # p20 extruder stepper homing
