remove stepper_y1 pin, invert stepper_z direction

--- a/config/configs-pipetting-bot/configs-mainsail/printer.cfg
+++ b/config/configs-pipetting-bot/configs-mainsail/printer.cfg
@@ -1,3 +1,7 @@
+[include fluidd.cfg]
+# Source: https://github.com/gwisp2/klipper-drawbot
+# Derived from the Drawbot project, removed servo command and stuff.
+
 [virtual_sdcard]
 #path: ~/gcode_files
 path: /home/pi/printer_data/gcodes
@@ -102,14 +106,14 @@ microsteps: 8
 rotation_distance: 40
 # Migth be able to use an AX pin: https://electronics.stackexchange.com/a/67104
 # Trying with A3 (PC3).
-endstop_pin: ^!PC3
+# endstop_pin: ^!PC3
 # position_endstop: 0  # // Option 'position_endstop' is not valid in section 'stepper_y1'
 # position_max: 200  # // Option 'position_max' is not valid in section 'stepper_y1'
 # homing_speed: 50  # // Option 'homing_speed' is not valid in section 'stepper_y1'
 
 [stepper_z]
 step_pin: PD4
-dir_pin: PD7
+dir_pin: !PD7
 enable_pin: !PB0
 microsteps: 8
 # https://www.klipper3d.org/Rotation_Distance.html
@@ -447,4 +451,3 @@ accel: 100.0
 # Parameters for "ExtruderHoming":
 velocity: 25.0
 accel: 100.0
-
