--- a/config/configs-pipetting-bot/configs-mainsail/printer.cfg
+++ b/config/configs-pipetting-bot/configs-mainsail/printer.cfg
@@ -79,6 +79,7 @@ rotation_distance: 40
 endstop_pin: ^!PB1
 position_endstop: 0
 position_max: 360
+position_min: -100
 homing_speed: 50
 
 [stepper_y]
@@ -93,6 +94,7 @@ endstop_pin: ^!PB2
 # No need to set home direction manually: Klipper understands correct direction by seeing that position_endstop = position_max
 position_endstop: 0
 position_max: 220
+position_min: -100
 homing_speed: 50
 
 [stepper_y1]
@@ -123,6 +125,7 @@ rotation_distance: 8
 endstop_pin: ^!PB3
 position_endstop: 0
 position_max: 200
+position_min: -100
 homing_speed: 50
 
 
