settings for mainsail

--- a/config/configs-pipetting-bot/configs-mainsail/macros.cfg
+++ b/config/configs-pipetting-bot/configs-mainsail/macros.cfg
@@ -14,3 +14,11 @@ gcode:
   SET_GCODE_VARIABLE MACRO=T0 VARIABLE=active VALUE=0
   SET_GCODE_VARIABLE MACRO=T1 VARIABLE=active VALUE=1
   ACTIVATE_EXTRUDER EXTRUDER=extruder1
+
+[gcode_macro H_T0]
+gcode:
+  HOME_EXTRUDER EXTRUDER=extruder
+
+[gcode_macro H_T1]
+gcode:
+  HOME_EXTRUDER EXTRUDER=extruder1
