use pi pico pins

--- a/config/configs-pipetting-bot/config-pi-pico/printer-multi_extruder_stepper.cfg
+++ b/config/configs-pipetting-bot/config-pi-pico/printer-multi_extruder_stepper.cfg
@@ -4,59 +4,57 @@
 # CNC MCU CONFIGURATION ####
 
 [mcu]
-# You may need to change this.
-# serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
-serial: /dev/serial/by-id/usb-Arduino__www.arduino.cc__0043_85334343738351B00140-if00
-# Has to be the same as in firmware
-baud: 250000
+# You may need to change this, using: $ ls /dev/serial/by-id/*
+serial: /dev/serial/by-id/usb-Klipper_rp2040_E6605838833DB138-if00
+# Pi Pico pin map:
+# https://circuitstate.com/pinouts/raspberry-pi-pico-microcontroller-board-pinout-diagrams/
 
-[virtual_sdcard]
-path: ~/gcode_files
+# [virtual_sdcard]
+# path: ~/gcode_files
 
 [printer]
 kinematics: cartesian
-# Current values are quite slow, you may try to find values that are the best for your drawbot
 # Units: mm/s and mm/s^2
-max_velocity: 10
+max_velocity: 500
 max_accel: 300
 
 # CNC STEPPER CONFIGURATION ####
 
 [stepper_x]
-step_pin: PD2
-dir_pin: PD5
-# Might require [duplicate_pin_override]
-enable_pin: !PB0
-microsteps: 16
-rotation_distance: 40
+step_pin: gpio0
+dir_pin: gpio1
+enable_pin: gpio2
 # endstop_pin is required even if you don't use endstops.
 # Add ! after ^ if your use NO endstops instead of NC.
-endstop_pin: ^!PB1
+endstop_pin: gpio3
+microsteps: 16
+rotation_distance: 40
 position_endstop: 0
 position_max: 360
 homing_speed: 50
 
 [stepper_y]
-step_pin: PD3
-dir_pin: PD6
-enable_pin: !PB0
-microsteps: 16
-rotation_distance: 40
+step_pin: gpio4
+dir_pin: gpio5
+enable_pin: gpio6
 # endstop_pin is required even if you don't use endstops.
 # Add ! after ^ if your use NO endstops instead of NC.
-endstop_pin: ^!PB2
-# No need to set home direction manually: Klipper understands correct direction by seeing that position_endstop = position_max
+endstop_pin: gpio7
+microsteps: 16
+rotation_distance: 40
 position_endstop: 220
 position_max: 220
 homing_speed: 50
 
 [stepper_z]
-step_pin: PD4
-dir_pin: PD7
-enable_pin: !PB0
+step_pin: gpio8
+dir_pin: gpio9
+enable_pin: gpio10
+# endstop_pin is required even if you don't use endstops.
+# Add ! after ^ if your use NO endstops instead of NC.
+endstop_pin: gpio11
 microsteps: 16
 rotation_distance: 2
-endstop_pin: ^!PB3
 position_endstop: 0
 position_max: 200
 homing_speed: 50
@@ -65,22 +63,21 @@ homing_speed: 50
 # https://www.klipper3d.org/Config_Reference.html?h=mcu#additional-stepper-motors-and-extruders
 # Configure "A" axis of the CNC shield
 [stepper_y1]
-step_pin: PB4
-dir_pin: !PB5
-enable_pin: !PB0
+step_pin: gpio12
+dir_pin: gpio13
+enable_pin: gpio14
+# endstop_pin is required even if you don't use endstops.
+# Add ! after ^ if your use NO endstops instead of NC.
+endstop_pin: gpio15
 microsteps: 16
 rotation_distance: 40
-# Migth be able to use an AX pin: https://electronics.stackexchange.com/a/67104
-# Trying with A3 (PC3).
-endstop_pin: ^!PC3
 # position_endstop: 0  # // Option 'position_endstop' is not valid in section 'stepper_y1'
 # position_max: 200  # // Option 'position_max' is not valid in section 'stepper_y1'
 # homing_speed: 50  # // Option 'homing_speed' is not valid in section 'stepper_y1'
 
 
-# G2 G3 ####
-# Add support for G2 and G3 commands
 [gcode_arcs]
+# Add support for G2 and G3 commands
 resolution: 1.0
 
 [display_status]
@@ -94,21 +91,6 @@ enable_force_move: True
 # Example:
 # FORCE_MOVE STEPPER=stepper_x DISTANCE=-10 VELOCITY=1
 
-# PIPETTE MCU CONFIGURATION ####
-
-[mcu tools]
-# https://www.klipper3d.org/Config_Reference.html?h=mcu#mcu-my_extra_mcu
-# Additional micro-controllers (one may define any number of sections with an "mcu" prefix).
-# Additional micro-controllers introduce additional pins that may be configured as heaters, steppers, fans, etc.. 
-# For example, if an "[mcu extra_mcu]" section is introduced, then pins such as "extra_mcu:ar9" may then be 
-# used elsewhere in the config (where "ar9" is a hardware pin name or alias name on the given mcu).
-# You may need to change this.
-# serial: /dev/serial/by-id/usb-Arduino__www.arduino.cc__0043_85334343738351B00140-if00
-serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
-# Has to be the same as in firmware
-baud: 250000
-
-
 # PIPETTE EXTRUDER CONFIGURATION ####
 # 
 # See pin naming examples here: https://github.com/Klipper3d/klipper/blob/master/config/sample-multi-mcu.cfg
@@ -116,26 +98,26 @@ baud: 250000
 # Sharing "enable_pin" might require "[duplicate_pin_override]"
 
 [extruder_stepper p20]
-extruder: ""
+extruder: 
 #   The extruder this stepper is synchronized to. If this is set to an
 #   empty string then the stepper will not be synchronized to an
 #   extruder. This parameter must be provided.
-step_pin: tools:PD2
-dir_pin: tools:PD5
-enable_pin: !tools:PB0
+step_pin: gpio16
+dir_pin: gpio17
+enable_pin: gpio18
 microsteps: 16
 rotation_distance: 2
 #   See the "stepper" section for the definition of the above
 #   parameters.
 
 [extruder_stepper p200]
-extruder: ""
+extruder: 
 #   The extruder this stepper is synchronized to. If this is set to an
 #   empty string then the stepper will not be synchronized to an
 #   extruder. This parameter must be provided.
-step_pin: tools:PD3
-dir_pin: tools:PD6
-enable_pin: !tools:PB0
+step_pin: gpio19
+dir_pin: gpio20
+enable_pin: gpio21
 microsteps: 16
 rotation_distance: 2
 #   See the "stepper" section for the definition of the above
@@ -197,7 +179,7 @@ max_extrude_only_accel: 100
 #
 # The remaining variables describe the extruder heater.
 # Setting to the CNC shield unused "Hold" pin on A1
-heater_pin: tools:PC1
+heater_pin: gpio28
 #   PWM output pin controlling the heater. This parameter must be
 #   provided.
 #max_power: 1.0
@@ -215,7 +197,7 @@ sensor_type: EPCOS 100K B57560G104F
 #   "Temperature sensors" section for other sensors. This parameter
 #   must be provided.
 # Setting to the CNC shield unused "Resume" pin on A2
-sensor_pin: tools:PC2
+sensor_pin: gpio27
 #   Analog input pin connected to the sensor. This parameter must be
 #   provided.
 #pullup_resistor: 4700
