--- a/config/configs-pipetting-bot/config-pi-pico/printer-multi_extruder.cfg
+++ b/config/configs-pipetting-bot/config-pi-pico/printer-multi_extruder.cfg
@@ -21,9 +21,9 @@ max_accel: 300
 # CNC STEPPER CONFIGURATION ####
 
 [stepper_x]
-step_pin: gpio0
-dir_pin: gpio1
-enable_pin: gpio2
+step_pin: gpio1
+dir_pin: gpio2
+enable_pin: gpio0
 # endstop_pin is required even if you don't use endstops.
 # Add ! after ^ if your use NO endstops instead of NC.
 endstop_pin: gpio3
@@ -36,10 +36,10 @@ homing_speed: 50
 [stepper_y]
 step_pin: gpio4
 dir_pin: gpio5
-enable_pin: gpio6
+enable_pin: gpio0
 # endstop_pin is required even if you don't use endstops.
 # Add ! after ^ if your use NO endstops instead of NC.
-endstop_pin: gpio7
+endstop_pin: gpio6
 microsteps: 16
 rotation_distance: 40
 position_endstop: 220
@@ -47,12 +47,12 @@ position_max: 220
 homing_speed: 50
 
 [stepper_z]
-step_pin: gpio8
-dir_pin: gpio9
-enable_pin: gpio10
+step_pin: gpio7
+dir_pin: gpio8
+enable_pin: gpio0
 # endstop_pin is required even if you don't use endstops.
 # Add ! after ^ if your use NO endstops instead of NC.
-endstop_pin: gpio11
+endstop_pin: gpio9
 microsteps: 16
 rotation_distance: 2
 position_endstop: 0
@@ -63,12 +63,12 @@ homing_speed: 50
 # https://www.klipper3d.org/Config_Reference.html?h=mcu#additional-stepper-motors-and-extruders
 # Configure "A" axis of the CNC shield
 [stepper_y1]
-step_pin: gpio12
-dir_pin: gpio13
-enable_pin: gpio14
+step_pin: gpio10
+dir_pin: gpio11
+enable_pin: gpio0
 # endstop_pin is required even if you don't use endstops.
 # Add ! after ^ if your use NO endstops instead of NC.
-endstop_pin: gpio15
+endstop_pin: gpio12
 microsteps: 16
 rotation_distance: 40
 # position_endstop: 0  # // Option 'position_endstop' is not valid in section 'stepper_y1'
@@ -98,9 +98,9 @@ enable_force_move: True
 # Sharing "enable_pin" might require "[duplicate_pin_override]"
 
 [extruder]
-step_pin: gpio16
-dir_pin: gpio17
-enable_pin: gpio18
+step_pin: gpio13
+dir_pin: gpio14
+enable_pin: gpio0
 microsteps: 16
 rotation_distance: 2
 #full_steps_per_rotation:
@@ -220,11 +220,24 @@ max_temp: 99999999
 #   heater and sensor hardware failures. Set this range just wide
 #   enough so that reasonable temperatures do not result in an error.
 #   These parameters must be provided.
+position_endstop: 0.0
+position_min: 0.0
+position_max: 100.0
+homing_speed: 25.0
+second_homing_speed: 25.0
+homing_retract_speed: 25.0
+homing_retract_dist: 2.0
+homing_positive_dir: False
+# Parameters for setting up an extruder "PrinterRail"
+# Endstop pin at the D10 / Y-limit pin, on 2nd MCU.
+endstop_pin: gpio15
+# Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
+
 
 [extruder1]
-step_pin: gpio19
-dir_pin: gpio20
-enable_pin: gpio21
+step_pin: gpio16
+dir_pin: gpio17
+enable_pin: gpio0
 microsteps: 16
 rotation_distance: 2
 #full_steps_per_rotation:
@@ -344,4 +357,16 @@ max_temp: 99999999
 #   heater and sensor hardware failures. Set this range just wide
 #   enough so that reasonable temperatures do not result in an error.
 #   These parameters must be provided.
+position_endstop: 0.0
+position_min: 0.0
+position_max: 100.0
+homing_speed: 25.0
+second_homing_speed: 25.0
+homing_retract_speed: 25.0
+homing_retract_dist: 2.0
+homing_positive_dir: False
+# Parameters for setting up an extruder "PrinterRail"
+# Endstop pin at the D10 / Y-limit pin, on 2nd MCU.
+endstop_pin: gpio18
+# Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
 
