--- a/config/configs-pipetting-bot/configs-mainsail/printer.cfg
+++ b/config/configs-pipetting-bot/configs-mainsail/printer.cfg
@@ -12,11 +12,14 @@ path: /home/pi/printer_data/gcodes
 [include macros.cfg]
 # Include other macros.
 
+# [include runout_sensor.cfg]
+# Include configs of dunout sensors for extruder homing.
+
 [printer]
 kinematics: cartesian
 # Current values are quite slow, you may try to find values that are the best for your drawbot
 # Units: mm/s and mm/s^2
-max_velocity: 10
+max_velocity: 2000
 max_accel: 300
 
 [gcode_arcs]
@@ -78,8 +81,11 @@ rotation_distance: 40
 # Add ! after ^ if your use NO endstops instead of NC.
 endstop_pin: ^!PB1
 position_endstop: 0
+position_min: -360
 position_max: 360
-homing_speed: 50
+homing_positive_dir: False
+homing_speed: 100
+second_homing_speed: 25.0
 
 [stepper_y]
 step_pin: PD3
@@ -92,8 +98,11 @@ rotation_distance: 40
 endstop_pin: ^!PB2
 # No need to set home direction manually: Klipper understands correct direction by seeing that position_endstop = position_max
 position_endstop: 0
-position_max: 220
-homing_speed: 50
+position_min: -400
+position_max: 400
+homing_positive_dir: False
+homing_speed: 100
+second_homing_speed: 25.0
 
 [stepper_y1]
 # Additional stepper motors and extruders
@@ -122,9 +131,11 @@ microsteps: 8
 rotation_distance: 8
 endstop_pin: ^!PB3
 position_endstop: 0
+position_min: -200
 position_max: 200
-homing_speed: 50
-
+homing_positive_dir: False
+homing_speed: 100
+second_homing_speed: 25.0
 
 
 
@@ -152,7 +163,7 @@ homing_speed: 50
 # #   parameters.
 [extruder]
 step_pin: tools:PD2
-dir_pin: tools:PD5
+dir_pin: !tools:PD5
 enable_pin: !tools:PB0
 microsteps: 8
 rotation_distance: 8
@@ -275,7 +286,7 @@ max_temp: 99999999
 #   These parameters must be provided.
 position_endstop: 0.0
 position_min: 0.0
-position_max: 50.0
+position_max: 100.0
 homing_speed: 25.0
 second_homing_speed: 25.0
 homing_retract_speed: 25.0
@@ -304,7 +315,7 @@ endstop_pin: ^!tools:PB3
 # #   parameters.
 [extruder1]
 step_pin: tools:PD3
-dir_pin: tools:PD6
+dir_pin: !tools:PD6
 enable_pin: !tools:PB0
 microsteps: 8
 rotation_distance: 8
@@ -427,7 +438,7 @@ max_temp: 99999999
 #   These parameters must be provided.
 position_endstop: 0.0
 position_min: 0.0
-position_max: 50.0
+position_max: 100.0
 homing_speed: 25.0
 second_homing_speed: 25.0
 homing_retract_speed: 25.0
@@ -438,17 +449,4 @@ homing_positive_dir: False
 endstop_pin: !tools:PB2
 # Parameters for ExtruderStepper init and PrinterRail.add_extra_stepper
 
-# p20 extruder stepper homing
-# Config section for the new extruder_homing.py extras module.
-[extruder_home extruder]
-# Parameters for "ExtruderHoming":
-velocity: 25.0
-accel: 100.0
-
-# p200 extruder stepper homing
-# Config section for the new extruder_homing.py extras module.
-[extruder_home extruder1]
-# Parameters for "ExtruderHoming":
-velocity: 25.0
-accel: 100.0
-
+[include home_extruder.cfg]
