add probe_G38 config, ready for a test

--- a/config/configs-pipetting-bot/config-pi-pico/probe_G38.cfg
+++ b/config/configs-pipetting-bot/config-pi-pico/probe_G38.cfg
@@ -1,5 +1,11 @@
-[probe]
-pin:
+[probe_G38]
+# Activate the "probe_G38.py" extras module, providing generalized G38.2 probing.
+#
+# Pi Pico pin map:
+# https://circuitstate.com/pinouts/raspberry-pi-pico-microcontroller-board-pinout-diagrams/
+#
+# Settings from original "[probe]" section.
+pin: gpio19
 #   Probe detection pin. If the pin is on a different microcontroller
 #   than the Z steppers then it enables "multi-mcu homing". This
 #   parameter must be provided.
@@ -13,7 +19,7 @@ pin:
 #y_offset: 0.0
 #   The distance (in mm) between the probe and the nozzle along the
 #   y-axis. The default is 0.
-z_offset:
+z_offset: 0
 #   The distance (in mm) between the bed and the nozzle when the probe
 #   triggers. This parameter must be provided.
 #speed: 5.0
